--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -287,7 +287,8 @@ main {
 .navbar__mobile-link:hover,
 .navbar__mobile-link--active {
   color: var(--text-primary);
-  border-color
+  border-color: rgba(246, 247, 251, 0.2);
+}
 
 /* Backdrop */
 .navbar__backdrop {
